<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cv_therapy">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/name_medicine_therapy_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:gravity="center|start"
            android:paddingStart="17sp"
            android:paddingEnd="17sp"
            android:text="@string/Name"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/delete_therapy_card"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/delete"
            android:textSize="20sp"
            app:strokeColor="@color/design_default_color_error"
            app:strokeWidth="1sp"
            tools:ignore="ContentDescription,RelativeOverlap,RtlHardcoded" />

        <TextView
            android:id="@+id/date_therapy_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_medicine_therapy_card"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:gravity="center|start"
            android:paddingStart="17sp"
            android:paddingEnd="17sp"
            android:text="@string/Time"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/name_person_therapy_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_medicine_therapy_card"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="0dp"
            android:layout_toEndOf="@+id/date_therapy_card"
            android:gravity="center|start"
            android:paddingStart="17sp"
            android:paddingEnd="17sp"
            android:text="@string/PersonName"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/count_therapy_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date_therapy_card"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="177dp"
            android:gravity="center|start"
            android:paddingStart="17sp"
            android:paddingEnd="17sp"
            android:text="@string/Count"
            android:textSize="20sp" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>

</LinearLayout>
